--- a/index.html
+++ b/index.html
@@ -6,22 +6,52 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="./css/style.css">
 	<script defer src="./js/app.js"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<title>Tic Tac Toe</title>
 </head>
 <body>
-	<h1>Tic-Tac-Toe</h1>
-	<h2 id="message">Message</h2>
 
-	<section class="board">
-		<div id="sq0"></div>
-		<div id="sq1"></div>
-		<div id="sq2"></div>
-		<div id="sq3"></div>
-		<div id="sq4"></div>
-		<div id="sq5"></div>
-		<div id="sq6"></div>
-		<div id="sq7"></div>
-		<div id="sq8"></div>
-	</section>    
+	<div id="start-screen">
+		<h1 id="title1">Tic Tac Toe</h1>
+		<button type="button" class="btn btn-success" id="start-btn">Start</button>
+	</div>
+
+	<div id="pick-screen">
+		<h1>Pick your side</h1>
+		<button id="pick-x" class="btn btn-primary">X</button>
+		<button id="pick-o" class="btn btn-danger">O</button>
+	</div>
+
+	
+	<div id="enemy-pick">
+		<h1>Choose your enemy:</h1>
+		<button type="button" id="robot" class="btn btn-primary">Robot</button>
+			<button type="button" id="human" class="btn btn-danger">Human</button>
+	</div>
+	
+	<div class="container-fluid" id="play-board">
+  <div class="row">
+    <div class="col hvr-back-pulse" id="cell1">-</div>
+    <div class="col hvr-back-pulse" id="cell2">-</div>
+    <div class="col hvr-back-pulse" id="cell3">-</div>
+  </div>
+
+	<div class="row">
+    <div class="col hvr-back-pulse" id="cell4">-</div>
+    <div class="col hvr-back-pulse" id="cell5">-</div>
+    <div class="col hvr-back-pulse" id="cell6">-</div>
+	</div>
+
+	<div class="row">
+    <div class="col hvr-back-pulse" id="cell7">-</div>
+    <div class="col hvr-back-pulse" id="cell8">-</div>
+    <div class="col hvr-back-pulse" id="cell9">-</div>
+  </div>
+
+	<div id="win-screen">
+		<h1 id="winner"></h1>
+		<button id="playAgain" class="btn btn-success btn-lg">Play Again</button>
+	</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
